Adding migration  factory and seeder
