# app/Http/Controllers/API/AuthController.php
@@ -16,6 +16,60 @@ class AuthController extends Controller
         $this->middleware('auth:api', ['except' => ['login','register']]);
     }
 
+            /**
+     * * * * * *  * * * *  * * * * * *
+     * @OA\Post(
+     * path="/api/login",
+     * summary="Post a new data",
+     *  security={
+     *         {"bearer": {}}
+     *     },
+     * description="Post new University  data",
+     * tags={"Auth"},
+     * 
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Pass Auth   credentials",
+     *    @OA\MediaType(
+     *       mediaType="multipart/form-data",
+     *       @OA\Schema(
+     *       type="object",
+     *       required={"email","password"},
+     *       @OA\Property(property="email", type="email", format="text", example="user@gmail.com"),
+     *       @OA\Property(property="password", type="password", format="password", example="123456789aawwee"),
+     *    ),
+     *    ),
+     * ),
+     * @OA\Response(
+     *    response=422,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="The given data was invalid.")
+     *        )
+     *     ),
+     *    @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *            @OA\MediaType(
+     *             mediaType="application/json",
+     *         ),
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
+
+
     public function login(Request $request)
     {
         $request->validate([
@@ -44,6 +98,62 @@ class AuthController extends Controller
 
     }
 
+        /**
+     * * * * * *  * * * *  * * * * * *
+     * @OA\Post(
+     * path="/api/register",
+     * summary="Post a new data",
+     * description="Post new user data",
+     *  *  security={
+     *         {"bearer": {}}
+     *     },
+     * tags={"Auth"},
+     * 
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Pass Auth   credentials",
+     *    @OA\MediaType(
+     *       mediaType="multipart/form-data",
+     *       @OA\Schema(
+     *       type="object",
+     *       required={"username","fullname","email","password"},
+     *       @OA\Property(property="username", type="text", format="text", example="Doe"),
+     *       @OA\Property(property="fullname", type="text", format="",example="Surname First name"),
+     *       @OA\Property(property="email", type="email", format="text", example="user@gmail.com"),
+     *       @OA\Property(property="password", type="password", format="password", example="123456789aawwee"),
+     *       @OA\Property(property="confirmation_password", type="password", format="password", example="123456789aawwee"),
+     *    ),
+     *    ),
+     * ),
+     * @OA\Response(
+     *    response=422,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="The given data was invalid.")
+     *        )
+     *     ),
+     *    @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *            @OA\MediaType(
+     *             mediaType="application/json",
+     *         ),
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
+
     public function register(Request $request){
         $request->validate([
             'username' => 'required|string|max:255',
@@ -71,6 +181,51 @@ class AuthController extends Controller
             ]
         ]);
     }
+
+    
+            /**
+     * * * * * *  * * * *  * * * * * *
+     * @OA\Post(
+     * path="/api/logout",
+     * summary="Post a new data",
+     *  security={
+     *         {"bearer": {}}
+     *     },
+     * description="Logout  data",
+     * tags={"Auth"},
+     * 
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Logout ",
+     * ),
+     * @OA\Response(
+     *    response=422,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="The given data was invalid.")
+     *        )
+     *     ),
+     *    @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *            @OA\MediaType(
+     *             mediaType="application/json",
+     *         ),
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
 
     public function logout()
     {
